[gd_scene load_steps=6 format=3 uid="uid://bndil7bonrxn7"]

[ext_resource type="Script" uid="uid://cb4jucftgxbe2" path="res://assets/scripts/base_enemy.gd" id="1_sgmmb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sgmmb"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgmmb"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_sgmmb"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isqm2"]
size = Vector2(40, 40)

[node name="baseEnemy" type="RigidBody2D"]
collision_layer = 8
physics_material_override = SubResource("PhysicsMaterial_sgmmb")
lock_rotation = true
continuous_cd = 2
script = ExtResource("1_sgmmb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="physicalCol" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_sgmmb")

[node name="detectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="triggerCircle" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_sgmmb")

[node name="contact" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 35

[node name="ContactCol" type="CollisionShape2D" parent="contact" groups=["enemies"]]
shape = SubResource("RectangleShape2D_isqm2")

[node name="hitParticles" type="GPUParticles2D" parent="."]
visible = false
amount = 30
sub_emitter = NodePath(".")
texture = SubResource("PlaceholderTexture2D_sgmmb")
explosiveness = 1.0
trail_lifetime = 0.2
process_material = ExtResource("2_isqm2")
